First implementation of new MachineConfig